CMake system complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,11 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Global output directories
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/Engine)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/Engine)
-set(CMAKE_RUNTAzE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
+# Исправлено: опечатка и путь без конфигурации
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 # Add subdirectories
-add_subdirectory(Sources/Kernel)
-add_subdirectory(Sources/Editor)
+add_subdirectory(Sources)
 
 # Tests
 option(WITH_TESTS "Build tests" OFF)
