--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "directx-in-electron",
-  "private": true,
+  "name": "versus-editor",
   "version": "1.0.0",
-  "description": "",
-  "main": "web/main.js",
+  "description": "3D Game Editor with Electron and WebGL",
+  "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "keywords": [],
-  "author": "ukabuer",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^16.0.4"
+    "electron": "^28.2.3"
+  },
+  "dependencies": {
+    "three": "^0.162.0"
   }
 }
